# keybound-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  compose.yml  demo.sh  deny.toml  docker-compose.yml  justfile  opencode.jsonc  parse_imports.rs  patch_registry.rs  patch_traits.py  run_test_openssl.rs  upgrade.md
app/backend/: Cargo.toml
app/backend/src/: main.rs
app/backend/src/branding/: banner.rs
app/bins/backend/: Cargo.toml
app/bins/backend/src/: main.rs
app/bins/backend/src/branding/: banner.rs
app/bins/sms-gateway/: Cargo.toml
app/bins/sms-gateway/src/: main.rs  sms_provider.rs
app/crates/backend-auth/: Cargo.toml
app/crates/backend-auth/src/: claims.rs  document.rs  http_client.rs  jwt_token.rs  lib.rs  middleware.rs  oidc_state.rs  signature_principal.rs
app/crates/backend-auth/tests/: jwt_auth_exclude_paths.rs
app/crates/backend-core/: Cargo.toml
app/crates/backend-core/src/: cli.rs  config.rs  dto.rs  error.rs  lib.rs  telemetry.rs
app/crates/backend-e2e/: Cargo.toml
app/crates/backend-e2e/src/: lib.rs
app/crates/backend-e2e/tests/: cucumber_full.rs  cucumber_smoke.rs  flow_sdk.rs  full.rs  smoke.rs  world.rs
app/crates/backend-e2e/tests/common/: mod.rs
app/crates/backend-e2e/tests/features/full/: auth.feature  first_deposit.feature  phone_otp.feature  user.feature
app/crates/backend-e2e/tests/features/smoke/: smoke.feature
app/crates/backend-flow-sdk/: Cargo.toml
app/crates/backend-flow-sdk/src/: actor.rs  context.rs  error.rs  export.rs  flow.rs  id.rs  import.rs  lib.rs  loader.rs  registry.rs  session.rs  step.rs
app/crates/backend-flow-sdk/src/actions/: close_session.rs  conditional.rs  debug.rs  error.rs  get_user.rs  kyc.rs  map.rs  mapping_utils.rs  mod.rs  noop.rs  otp.rs  retry.rs  set.rs  update_phone_number.rs  update_user_metadata.rs  upgrade_full_name.rs  wait.rs  webhook.rs
app/crates/backend-migrate/: Cargo.toml
app/crates/backend-migrate/migrations/: 20260216000001_consolidate_kyc.sql  20260217000001_remove_persisted_tiers.sql
app/crates/backend-migrate/migrations/20260203000002_kyc_case_and_submission/: up.sql
app/crates/backend-migrate/migrations/20260219000001_app_user/: up.sql
app/crates/backend-migrate/migrations/20260219000002_device/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260219000003_kyc_orchestration/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260227170000_state_machine_store/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260313090000_app_user_data/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260313130000_app_deposit_recipients/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260315100000_flow_sdk_revamp/: down.sql
app/crates/backend-migrate/migrations/20260315100000_flow_sdk_schema/: up.sql
app/crates/backend-migrate/migrations/20260315180000_drop_sm_tables/: up.sql
app/crates/backend-migrate/migrations/20260320110000_move_user_metadata_to_app_user_data/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260320120000_drop_fineract_customer_id/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260320140500_restore_app_user_data_eager_fetch/: down.sql  up.sql
app/crates/backend-migrate/migrations/20260320141000_split_metadata_into_app_user_data_rows/: down.sql  up.sql
app/crates/backend-migrate/src/: lib.rs  migrate.rs
app/crates/backend-model/: Cargo.toml
app/crates/backend-model/src/: bff.rs  db.rs  kc.rs  lib.rs  schema.rs  staff.rs
app/crates/backend-repository/: Cargo.toml
app/crates/backend-repository/queries/kyc/: ensure_profile.sql  get_document.sql  get_profile.sql  patch_information.sql  submit_profile.sql  update_approved.sql  update_rejected.sql  update_request_info.sql
app/crates/backend-repository/queries/staff/: list_kyc_submissions.sql
app/crates/backend-repository/src/: lib.rs  traits.rs
app/crates/backend-repository/src/pg/: device.rs  flow.rs  kyc.rs  mod.rs  state_machine.rs  user.rs
app/crates/backend-repository/tests/: kyc_repo.rs
app/crates/backend-server/: Cargo.toml
app/crates/backend-server/src/: bff_auth.rs  bff_signature.rs  file_storage.rs  flow_executor.rs  flow_registry.rs  flow_storage.rs  health.rs  lib.rs  object_storage.rs  services.rs  sms_provider.rs  sms_retry.rs  state.rs  swagger.rs  worker.rs
app/crates/backend-server/src/api/: auth.rs  bff.rs  bff_revamp.rs  date_deserialization_regression.rs  it_tests.rs  kc.rs  mod.rs  repro_422.rs  staff.rs
app/crates/backend-server/src/api/bff/: deposit_flow.rs  email_flow.rs  mod.rs  phone_flow.rs  session_flow.rs  shared.rs  step_flow.rs  upload_flow.rs  user_flow.rs
app/crates/backend-server/src/api/bff_flow/: handlers.rs  mod.rs  models.rs  service.rs
app/crates/backend-server/src/api/bff_uploads/: mod.rs
app/crates/backend-server/src/api/staff_flow/: mod.rs
app/crates/backend-server/src/auth_signature/: canonical.rs  mod.rs  replay.rs  verify.rs
app/crates/backend-server/src/flow_logic/: account_update.rs  address_proof.rs  admin_user_management.rs  builtin_steps.rs  cuss_integration.rs  device_enroll.rs  email_magic.rs  external_kyc.rs  first_deposit.rs  mod.rs  phone_otp.rs  webhook_http.rs
app/crates/backend-server/src/flows/: executor.rs  mod.rs  registry.rs  runtime.rs  upload_storage.rs
app/crates/backend-server/src/flows/definitions/: account_update.rs  cuss_integration.rs  (+9 more)
app/crates/backend-server/src/state_machine/: deposit.rs  engine.rs  event.rs  instance.rs  manual_step.rs  phone_otp.rs  types.rs
app/crates/backend-server/src/test_utils/: mod.rs
app/crates/backend-server/tests/: flow_cuss_e2e.rs
crates/backend-core/: Cargo.toml
crates/backend-core/src/: config.rs  dto.rs  error.rs  lib.rs
crates/backend-otlp/: Cargo.toml
crates/backend-otlp/src/: lib.rs  telemetry.rs
crates/backend-repository/: Cargo.toml
crates/backend-repository/src/: lib.rs  pg.rs  traits.rs
crates/backend-server/: Cargo.toml
crates/backend-server/src/: api.rs  configuration.rs  lib.rs  services.rs  sms_retry.rs  state.rs
(+142 files in other folders)
