[workspace]
members = [
    "app/backend",
    "crates/backend-auth",
    "crates/backend-cli",
    "crates/backend-core",
    "crates/backend-id",
    "crates/backend-metrics",
    "crates/backend-migrate",
    "crates/backend-model",
    "crates/backend-repository",
    "crates/backend-otlp",
    "crates/backend-server",

    "crates/gen_oas_client_cuss_registration",
    "crates/gen_oas_server_bff",
    "crates/gen_oas_server_kc",
    "crates/gen_oas_server_staff",
]
resolver = "3"

[workspace.dependencies]
backend-auth = { path = "./crates/backend-auth" }
backend-cli = { path = "./crates/backend-cli" }
backend-core = { path = "./crates/backend-core" }
backend-id = { path = "./crates/backend-id" }
backend-metrics = { path = "./crates/backend-metrics" }
backend-migrate = { path = "./crates/backend-migrate" }
backend-model = { path = "./crates/backend-model" }
backend-repository = { path = "./crates/backend-repository" }
backend-otlp = { path = "./crates/backend-otlp" }
backend-server = { path = "./crates/backend-server" }

gen_oas_client_cuss_registration = { path = "./crates/gen_oas_client_cuss_registration" }
gen_oas_server_bff = { path = "./crates/gen_oas_server_bff" }
gen_oas_server_kc = { path = "./crates/gen_oas_server_kc" }
gen_oas_server_staff = { path = "./crates/gen_oas_server_staff" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
jsonwebtoken = { version = "10.3" }
jwks = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing", "net"] }
thiserror = "2"
anyhow = "1"

tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "ansi", "serde_json"] }
tracing-appender = { version = "0.2" }
tracing-attributes = { version = "0.1" }
tracing = { version = "0", features = ["attributes", "async-await", "std"] }
tracing-error = { version = "0.2" }
tracing-flame = "0.2.0"
inferno = "0.12.4"

axum = { version = "0.8", features = ["macros", "tracing"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
cuid = { version = "1" }
getrandom = "0.4"
goose = "0.18"
reqwest = { version = "0.13", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "macros"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
utoipa = { version = "5", features = ["macros", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

mimalloc = "0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
incremental = false
strip = true

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
authors = [
    "Stephane Segning <sse@adorsys.com>",
]
