[workspace]
members = [
    "app/bins/backend",
    "app/crates/backend-auth",
    "app/crates/backend-cli",
    "app/crates/backend-core",
    "app/crates/backend-e2e",
    "app/crates/backend-id",
    "app/crates/backend-migrate",
    "app/crates/backend-model",
    "app/crates/backend-repository",
    "app/crates/backend-otlp",
    "app/crates/backend-server",
    "app/gen/oas_client_cuss",
    "app/gen/oas_server_bff",
    "app/gen/oas_server_kc",
    "app/gen/oas_server_staff",
]
resolver = "3"

[workspace.dependencies]
backend-auth = { path = "app/crates/backend-auth" }
backend-cli = { path = "app/crates/backend-cli" }
backend-core = { path = "app/crates/backend-core" }
backend-id = { path = "app/crates/backend-id" }
backend-migrate = { path = "app/crates/backend-migrate" }
backend-model = { path = "app/crates/backend-model" }
backend-repository = { path = "app/crates/backend-repository" }
backend-otlp = { path = "app/crates/backend-otlp" }
backend-server = { path = "app/crates/backend-server" }

gen_oas_client_cuss = { path = "app/gen/oas_client_cuss" }
gen_oas_server_bff = { path = "app/gen/oas_server_bff" }
gen_oas_server_kc = { path = "app/gen/oas_server_kc" }
gen_oas_server_staff = { path = "app/gen/oas_server_staff" }

o2o = "0"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
json-patch = "4.1.0"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
hex = "0.4"
base64 = "0.22"
ring = "0.17"
rand = "0.10"
jsonwebtoken = { version = "10.3" }
jwks = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing", "net", "signal", "time"] }
thiserror = "2"
anyhow = "1"
redis = { version = "1.0.4", features = ["aio", "tokio-comp"] }
apalis = "1.0.0-rc.4"
apalis-redis = "1.0.0-rc.4"

log = "0.4.29"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "ansi", "serde_json"] }
tracing-appender = { version = "0.2" }
tracing-attributes = { version = "0.1" }
tracing = { version = "0", features = ["attributes", "async-await", "std"] }
tracing-error = { version = "0.2" }
tracing-flame = "0.2.0"
inferno = "0.12.4"

axum = { version = "0.8", features = ["macros", "tracing"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
cuid = { version = "1" }
regex = "1"
getrandom = "0.4"
goose = "0.18"
reqwest = { version = "0.13", default-features = false, features = ["json", "http2", "gzip", "brotli", "deflate"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
utoipa = { version = "5", features = ["macros", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

bytes = "1"

diesel = { version = "2.3", features = ["postgres", "chrono", "serde_json", "r2d2"] }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool"] }
deadpool-diesel = { version = "0.6", features = ["postgres"] }
diesel_migrations = { version = "2.3", features = ["postgres"] }
tower = "0"
http = "1"
http-body-util = "0.1"
hyper = "1"

aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-sns = "1"
aws-types = "1"

mimalloc = "0"
axum-extra = "0.12"
headers = "0.4"
tower-http = { version = "0.6.8", features = ["trace"] }

mockall = "0.14"
serial_test = "3.4.0"
wiremock = "0.6.5"
testcontainers = { version = "0.27.1", default-features = false, features = ["ring"] }
testcontainers-modules = { version = "0.15.0", default-features = false }
tokio-postgres = "0.7.16"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
incremental = false
strip = true

[workspace.package]
version = "0.2.3"
edition = "2024"
license = "MIT"
publish = false
authors = [
    "Stephane Segning <selastlambou@gmail.com>",
    "adorsys GIS <gis-udm@adorsys.com>",
]
