[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
backend-cli.workspace = true
backend-core.workspace = true
backend-migrate.workspace = true
backend-otlp.workspace = true
mimalloc.workspace = true
tokio.workspace = true