[package]
name = "backend-otlp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-flame = { workspace = true }
backend-core.workspace = true
tracing.workspace = true