[package]
name = "backend-repository"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
backend-id.workspace = true
backend-model.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
