[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
backend-core = { workspace = true, features = ["cli", "telemetry"] }
backend-flow-sdk.workspace = true
backend-migrate.workspace = true
backend-server.workspace = true
mimalloc.workspace = true
tokio.workspace = true
clap.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
openssl.workspace = true
openssl-sys.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
diesel = { workspace = true, features = ["postgres", "chrono", "serde_json", "r2d2", "pq-src"] }

[target.'cfg(target_os = "macos")'.dependencies]
diesel = { workspace = true, features = ["postgres", "chrono", "serde_json", "r2d2"] }

[[bin]]
path = "src/health/main.rs"
name = "health"

[[bin]]
path = "src/main.rs"
name = "backend"
