[package]
name = "backend-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
backend-core.workspace = true
backend-id.workspace = true
base64.workspace = true
http = "1"
ring = "0.17"
serde_json.workspace = true
sha2.workspace = true
swagger = "7"

[dev-dependencies]
tokio.workspace = true
