[package]
name = "backend-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
backend-core = { workspace = true, features = ["reqwest"] }
base64.workspace = true
http.workspace = true
ring.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower.workspace = true
jsonwebtoken.workspace = true
jwks.workspace = true
async-trait.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio.workspace = true
