[package]
name = "backend-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
cuid.workspace = true
regex.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
openssl.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, optional = true }
utoipa.workspace = true
reqwest = { workspace = true, optional = true }
aws-sdk-s3 = "1"
aws-sdk-sns = "1"

[target.'cfg(target_os = "linux")'.dependencies]
diesel = { workspace = true, features = ["pq-src"] }

[target.'cfg(target_os = "macos")'.dependencies]
diesel = { workspace = true }

[features]
default = []
axum = ["dep:axum"]
reqwest = ["dep:reqwest"]

[dev-dependencies]
tokio.workspace = true
