[package]
name = "backend-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
cuid.workspace = true
regex.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
openssl.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
utoipa.workspace = true
reqwest = { workspace = true, optional = true }
aws-sdk-s3 = "1"
aws-sdk-sns = "1"
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
tracing-error = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
diesel = { workspace = true, features = ["pq-src"] }

[target.'cfg(target_os = "macos")'.dependencies]
diesel = { workspace = true }

[features]
default = []
axum = ["dep:axum"]
reqwest = ["dep:reqwest"]
cli = ["dep:clap"]
telemetry = [
    "dep:tracing-subscriber",
    "dep:tracing-appender",
    "dep:tracing-error",
    "dep:tracing",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
tokio.workspace = true
