[package]
name = "backend-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[features]
e2e-tests = []

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
reqwest = { workspace = true, features = ["json", "form"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = { workspace = true }

[[test]]
name = "smoke"
path = "tests/smoke.rs"
required-features = ["e2e-tests"]

[[test]]
name = "full"
path = "tests/full.rs"
required-features = ["e2e-tests"]
