[package]
name = "backend-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[features]
e2e-tests = []

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = "0.6"
reqwest = { workspace = true, features = ["json", "form"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = { workspace = true }
futures.workspace = true

[dev-dependencies]
serial_test = { workspace = true, features = ["file_locks"] }
cucumber.workspace = true

[[test]]
name = "smoke"
path = "tests/smoke.rs"
required-features = ["e2e-tests"]

[[test]]
name = "cucumber_smoke"
path = "tests/cucumber_smoke.rs"
harness = false
required-features = ["e2e-tests"]

[[test]]
name = "cucumber_full"
path = "tests/cucumber_full.rs"
harness = false
required-features = ["e2e-tests"]

[[test]]
name = "flow_sdk"
path = "tests/flow_sdk.rs"
required-features = ["e2e-tests"]
