[package]
name = "backend-flow-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[features]
default = ["webhook"]
embedded-config = ["include_dir"]
webhook = ["reqwest"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
include_dir = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
