[package]
name = "backend-flow-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[features]
default = []
embedded-config = ["include_dir"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
include_dir = { workspace = true, optional = true }
reqwest = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
