[package]
name = "backend-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
diesel.workspace = true
diesel-async.workspace = true
sqlx.workspace = true
tracing.workspace = true
backend-core.workspace = true
tempfile = "3"
async-trait.workspace = true
sqlx-utils.workspace = true
serde_json.workspace = true
