[package]
name = "backend-model"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
backend-core.workspace = true
chrono.workspace = true
diesel.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
o2o.workspace = true
gen_oas_server_bff.workspace = true
gen_oas_server_kc.workspace = true
gen_oas_server_staff.workspace = true
