[package]
name = "backend-repository"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
backend-core.workspace = true
backend-id.workspace = true
backend-model.workspace = true
chrono.workspace = true
deadpool-diesel.workspace = true
diesel.workspace = true
diesel-async.workspace = true
lru.workspace = true
sqlx-data.workspace = true
serde_json.workspace = true
sqlx.workspace = true
