[package]
name = "backend-repository"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[dependencies]
backend-core.workspace = true
backend-id.workspace = true
backend-model.workspace = true
chrono.workspace = true
deadpool-diesel.workspace = true
diesel-async.workspace = true
serde_json.workspace = true
openssl.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
diesel = { workspace = true, features = ["pq-src"] }

[target.'cfg(target_os = "macos")'.dependencies]
diesel = { workspace = true }

[dev-dependencies]
backend-migrate.workspace = true
gen_oas_server_kc.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow.workspace = true
openssl = { workspace = true, features = ["vendored"] }
