[package]
name = "backend-repository"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[features]
it-tests = []
e2e-tests = ["dep:testcontainers", "dep:testcontainers-modules"]

[dependencies]
backend-core.workspace = true
backend-id.workspace = true
backend-model.workspace = true
chrono.workspace = true
deadpool-diesel.workspace = true
diesel-async.workspace = true
serde_json.workspace = true
regex.workspace = true
openssl.workspace = true
openssl-sys.workspace = true
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, optional = true, features = ["postgres"] }
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
diesel = { workspace = true, features = ["pq-src"] }

[target.'cfg(target_os = "macos")'.dependencies]
diesel = { workspace = true }

[dev-dependencies]
backend-migrate.workspace = true
gen_oas_server_kc.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
anyhow.workspace = true
openssl = { workspace = true, features = ["vendored"] }

[[test]]
name = "state_machine_repo_testcontainers"
path = "tests/state_machine_repo_testcontainers.rs"
required-features = ["e2e-tests"]
