[package]
name = "backend-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true

[features]
test-utils = ["dep:mockall"]
it-tests = []
e2e-tests = ["dep:wiremock"]

default = ["all-flows"]

flow-sdk = ["dep:backend-flow-sdk"]
flow-phone-otp = ["flow-sdk"]
flow-email-magic = ["flow-sdk"]
flow-first-deposit = ["flow-sdk"]
flow-id-document = ["flow-sdk"]
flow-address-proof = ["flow-sdk"]
flow-external-kyc = ["flow-sdk", "step-webhook-http"]
flow-device-enroll = ["flow-sdk"]
flow-account-update = ["flow-sdk"]
flow-admin-user-management = ["flow-sdk"]

step-webhook-http = ["dep:jsonpath_lib"]
auth-token-exchange = []
auth-jwks = []

flow-cuss-integration = ["flow-first-deposit"]

# Legacy aliases kept for backward compatibility.
flow-deposit = ["flow-first-deposit"]
flow-email = ["flow-email-magic"]
flow-phone = ["flow-phone-otp"]
flow-session = ["flow-sdk"]
flow-step = ["flow-sdk"]
flow-upload = ["flow-sdk"]
flow-user = ["flow-sdk"]
all-flows = [
  "flow-phone-otp",
  "flow-email-magic",
  "flow-first-deposit",
  "flow-id-document",
  "flow-address-proof",
  "flow-external-kyc",
  "flow-device-enroll",
  "flow-account-update",
  "flow-admin-user-management",
]

[dependencies]
backend-auth = { workspace = true }
backend-core = { workspace = true, features = ["axum"] }
backend-flow-sdk = { workspace = true, optional = true }
backend-id = { workspace = true }
backend-repository = { workspace = true }
backend-model = { workspace = true }
backend-migrate = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["cookie"] }
axum-server = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
diesel-async = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tracing = { workspace = true }
headers = { workspace = true }
sha2 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
jsonpath_lib = { workspace = true, optional = true }
base64 = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
apalis = { workspace = true }
apalis-redis = { workspace = true }
bytes = { workspace = true }
strum = { workspace = true }
mockall = { workspace = true, optional = true }
wiremock = { workspace = true, optional = true }

aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-types = { workspace = true }

gen_oas_server_kc = { workspace = true }
gen_oas_client_cuss = { workspace = true }

openssl = { workspace = true }
openssl-sys = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
diesel = { workspace = true, features = ["pq-src"] }

[target.'cfg(target_os = "macos")'.dependencies]
diesel = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "flow_cuss_e2e"
path = "tests/flow_cuss_e2e.rs"
required-features = ["e2e-tests", "flow-sdk"]
